<resources>
    <string name="app_name">Aria</string>

    <!-- Common -->
    <string name="common_actionSnackBar">Close</string>

    <!-- Main Activity -->
    <string name="mainActivityTabLayout_tabRecord">Record</string>
    <string name="mainActivityTabLayout_tabPlayback">Playback</string>

    <!-- Main Activity Menu -->
    <string name="mainMenu_optionSettingsTitle">Settings</string>

    <!-- Fragment and Activity Labels -->
    <string name="recordFragmentLabel">Record</string>
    <string name="playbackListFragmentLabel">Playback List</string>
    <string name="playbackActivityLabel">Playback</string>
    <string name="settingsActivityLabel">Settings</string>

    <!-- Record Fragment -->
    <string name="recordFragment_timerStartText">00:00.00</string>
    <string name="recordFragment_fabCancelDescription">Cancel</string>
    <string name="recordFragment_fabSaveDescription">Save</string>
    <string name="recordFragment_fabRecordDescription">Record</string>

    <string name="recordFragment_onDiscardYesClick">Recording discarded</string>
    <string name="recordFragment_recordingFailedStart">Error: Recorder failed to start. Please try again.</string>

    <!-- Discard Recording Dialog Fragment -->
    <string name="discardRecordingDialog_title">Discard Recording</string>
    <string name="discardRecordingDialog_message">Are you sure you want to discard this recording?</string>
    <string name="discardRecordingDialog_positive">Yes</string>
    <string name="discardRecordingDialog_negative">No</string>

    <!-- Name Edit Dialog Fragment -->
    <string name="nameEditDialog_title">Edit Recording Name</string>

    <!-- Name Recording Dialog Fragment -->
    <string name="nameRecordingDialog_title">Save Recording</string>
    <string name="nameRecordingDialog_editTextHint">Recording Name</string>
    <string name="nameRecordingDialog_positive">Save</string>
    <string name="nameRecordingDialog_negative">Cancel</string>

    <!-- Permission Context Dialog Fragment -->
    <string name="permissionContextDialog_messageAudioRecord">This app requires permission to record audio to be functional. If you deny this permission twice, you must manually set the permissions in Settings.</string>
    <string name="permissionContextDialog_messagePhoneState">This app requires permission to read your phone\'s state to make prioritize urgent actions, like phone calls, over the audio player service.</string>
    <string name="permissionContextDialog_messageDefault">This app requires the requested permission to be functional.</string>
    <string name="permissionContextDialog_negative">Dismiss</string>
    <string name="permissionContextDialog_positive">Settings</string>

    <!-- YesNoDialogFragment -->
    <string name="yesNoDialog_positive">Yes</string>
    <string name="yesNoDialog_negative">No</string>

    <!-- Audio Record Details Fragment -->
    <string name="audioRecordDetailsDialog_heading">Record Details</string>
    <string name="audioRecordDetailsDialog_titleText">Title: %s</string>
    <string name="audioRecordDetailsDialog_durationText">Duration: %s</string>
    <string name="audioRecordDetailsDialog_recordIdText">Record ID: %d</string>
    <string name="audioRecordDetailsDialog_dateCreatedText">Date Created: %s</string>

    <!-- Playback List Fragment -->
    <string name="playbackListFragment_recordDelete">Deleted recording</string>
    <string name="playbackListFragment_recordsDelete">Deleted recordings</string>
    <string name="playbackListFragment_warningDelete">Are you sure you want to delete the selected records?</string>
    <string name="playbackListFragment_undoDelete">Undo</string>
    <string name="playbackListFragment_recordNamePlaceholder">New Recording</string>
    <string name="playbackListFragment_warningNameOverwrite">Do you want to overwrite an existing record with the same name?</string>
    <string name="playbackListFragment_searchTextHint">Search record by name</string>

    <!-- Playback List Menu -->
    <string name="playbackListMenu_optionSearchTitle">Search</string>

    <!-- Playback List Fragment Contextual Action Bar -->
    <string name="viewholderContextualActionBar_editTitle">Rename</string>
    <string name="viewholderContextualActionBar_editDescription">Rename this audio record</string>
    <string name="viewholderContextualActionBar_deleteTitle">Delete</string>
    <string name="viewholderContextualActionBar_deleteDescription">Delete this audio record</string>
    <string name="viewHolderContextualActionBar_infoTitle">Details</string>
    <string name="viewHolderContextualActionBar_infoDescription">Get the details of audio record</string>

    <!-- Playback List Fragment RecyclerView ViewHolder Layout -->
    <string name="playbackListViewHolder_imageDescription">Play Audio</string>

    <!-- Playback Fragment -->

    <!-- Settings Fragment -->
    <string name="settingsFragment_removeTitle">Recently removed</string>
    <string name="settingsFragment_removeSummary">Send deleted recordings to "Recently removed"</string>
    <string name="settingsFragment_feedbackTitle">Feedback</string>
    <string name="settingsFragment_feedbackSummary">Report technical issues or suggest new features</string>


    <!-- Audio Record Player Service -->
    <string name="audioRecordPlayerService_notificationName">Audio Record Playback</string>
    <string name="audioRecordPlayerService_notificationDescription">Audio Record Playback Controls</string>
    <string name="audioRecordPlayerService_notificationActionPlay">Play</string>
    <string name="audioRecordPlayerService_notificationActionPause">Pause</string>
    <string name="audioRecordPlayerService_notificationActionNextFive">Forward Five</string>
    <string name="audioRecordPlayerService_notificationActionPrevFive">Replay Five</string>

</resources>