<?xml version="1.0" encoding="utf-8"?>

<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRecordingDialogFragment_textInputLayout"
            android:hint="@string/nameRecordingDialog_editTextHint"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameRecordingDialogFragment_inputEditText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ellipsize="end"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nameRecordingDialogFragment_cancelButton"
                android:text="@string/nameRecordingDialog_negative"

                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/nameRecordingDialogFragment_saveButton"
                android:text="@string/nameRecordingDialog_positive"

                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>